syntax = "proto3";

package samples;

message StructWithCircularReference {
  StructWithCircularReference circular_reference = 1;
}

