syntax = "3";

package samples;

message StructWithNoExportField {}

